# LearnMan

./: .replit  app.py  config.json  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-Create-a-comprehensive-Flask-based-tutorial-platform-with-the-following-specifications-Core-Requ-1757935788071_1757935788072.txt
data/: courses.json  tutorial_platform.db
data/modules/: 11b5eeec-eceb-4b90-b3e6-dfa1a447f6ef.html  intro-ethical-hacking.html  network-scanning-python.html  password-security-cracking.html  python-networking-basics.html
static/: manifest.json  sw.js
static/css/: style.css
static/js/: admin.js  main.js
templates/: base.html  index.html  module.html  quiz.html
templates/admin/: certificate_template_form.html  certificate_templates.html  dashboard.html  login.html  module_form.html
